# mystudio-ide

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build-win.sh
.github/workflows/: build.yml
libmystudio/: Cargo.toml  README.md
libmystudio/src/: encoding.rs  fs.rs  lib.rs  workspace.rs
libmystudio/src/app_config/: mod.rs
libmystudio/src/lsp/: handler.rs  mod.rs
libmystudio/src/notebook/: cache.rs  editor.rs  mod.rs
libmystudio/src/test/: mod.rs
libmystudio/src/test/fixtures/: utf16_file.txt
libmystudio/src/tree/: mod.rs  tree_cell.rs  tree_model.rs
mystudio-ide/: Cargo.toml  README.md
mystudio-ide/res/ui/: main_window.glade
mystudio-ide/src/: comms.rs  keyboard.rs  main.rs
mystudio-ide/src/res/: styles.css
mystudio-ide/src/res/ui/: main_window.glade
mystudio-ide/src/ui/: mod.rs
mystudio-ide/src/ui/action_row/: handler.rs  mod.rs
mystudio-ide/src/ui/features/: find_in_files.rs  mod.rs
mystudio-ide/src/ui/notebook/: editor.rs  handler.rs  mod.rs  nbmain.rs
mystudio-ide/src/ui/statusbar/: encoding_indicator.rs  goto_line.rs  line_indicator.rs  mod.rs
mystudio-ide/src/ui/w_explorer/: mod.rs  tree_view.rs
res/ui/: main_window.glade
src/: action_handler.rs  comms.rs  keyboard.rs  main.rs  workspace.rs
src/mys_fs/: reader.rs
src/ui/: btn_action_row.rs  mod.rs  notebook.rs  statusbar.rs  text_view.rs  tree_model.rs  tree_view.rs  utils.rs
src/ui/action_row/: mod.rs  ui.rs
src/ui/notebook/: cache.rs  editor.rs  handler.rs  mod.rs  nbmain.rs
src/ui/statusbar/: line_indicator.rs  message.rs  mod.rs
src/ui/w_explorer/: mod.rs  model.rs  tree_cell.rs  tree_view.rs
