[package]
name = "my-studio"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.15.4", features = ["v3_24"] }
jwalk = "0.6.0"
arc-swap="1.3.2"
static_init = "1.0.0"
sourceview4 = "0.3.0"
regex="1.5.5"
