[package]
name = "libmystudio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.15.4", features = ["v3_24"] }
arc-swap = "1.3.2"
jwalk = "0.6.0"
static_init = "1.0.0"
sourceview4 = "0.3.0"
