[package]
name = "libmystudio"
description = "Core library used by MyStudio IDE application"
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/shanmukhateja/mystudio-ide"
repository = "https://github.com/shanmukhateja/mystudio-ide"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.15.4", features = ["v3_24"] }
arc-swap = "1.3.2"
jwalk = "0.6.0"
static_init = "1.0.0"
sourceview4 = "0.3.0"
