[package]
name = "libmystudio"
description = "Core library used by MyStudio IDE application"
version = "0.1.3"
edition = "2021"
license = "MIT"
homepage = "https://github.com/shanmukhateja/mystudio-ide"
repository = "https://github.com/shanmukhateja/mystudio-ide"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.15.4", features = ["v3_24"] }
arc-swap = "1.3.2"
jwalk = "0.6.0"
static_init = "1.0.0"
sourceview4 = "0.3.0"
tempfile = "3.3.0"
encoding_rs = "0.8.31"
content_inspector = "0.2.4"
new_mime_guess = "4.0.1"
byteorder="1.4.3"
grep = "0.2.10"
toml="0.6.0"
serde = "1.0.152"
config = "0.13.3"
dirs = "4.0.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.93"
json= "0.12.4"