[package]
name = "mystudio-ide"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.15.4", features = ["v3_24"] }
static_init = "1.0.0"
sourceview4 = "0.3.0"
regex="1.5.5"
libmystudio= { path = "../libmystudio" }
